syntax = "proto3";

option go_package = "/api";

import "google/api/annotations.proto";

package api;

message SendMessageItem {
  string text = 1;
}

message SendPhotoItem{
  string message = 1;
  string photoUrl = 2;
}

message Empty{}

service SomeService{
  rpc SendMessage(SendMessageItem) returns(Empty){
    option (google.api.http) = {
    post: "/v1/SendMessage"
    body: "*"
  };}
  rpc SendPhoto(SendPhotoItem) returns(Empty){
    option (google.api.http) = {
      post: "/v1/SendPhoto"
      body: "*"
    };}
}